# python-template

./: Dockerfile  README.md  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: cq.yml
